Opened 2 years ago
Closed 11 months ago
#18026 closed bug (fixed)
WebPositive (master) - Crash on quit
Reported by: | vidrep | Owned by: | pulkomandy |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Applications/WebPositive | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Attachments (1)
Change History (7)
by , 2 years ago
Attachment: | WebPositive-1341-debug-24-10-2022-23-13-38.report added |
---|
comment:1 by , 2 years ago
Milestone: | Unscheduled → R1/beta4 |
---|---|
Version: | R1/beta3 → R1/Development |
comment:2 by , 2 years ago
It would be nice, but I'm not exactly sure what happens.
I have already seen similar things in previous versions, it seems from the backtrace that the destructor for ThreadGlobalData attempts to create a new ThreadGlobalData instance, and I'm not sure where that cycle needs to be broken.
comment:3 by , 2 years ago
It is fixed after merging more changes from WebKit. However I ran into a new problem: when loading Google Image search I get an infinite loop, again somewhere in WebKit code I have no control on. Not sure what we can do but wait for WebKit to fix it.
comment:4 by , 2 years ago
Milestone: | R1/beta4 → Unscheduled |
---|
comment:5 by , 11 months ago
HaikuWebKit 1.9.11
WebKit 619.1.4
WebPositive no longer crashes on quit with latest build.
comment:6 by , 11 months ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
If we're going to update WebKit for beta4 it's probably best if it doesn't crash on quit?