Fix build after merge.

Fixes #18026, but there is a new problem, when trying to load Google
Image search, I get into an infinite loop, again in what looks like is a
problem on WebKit side.